--- a/offers.html
+++ b/offers.html
@@ -104,8 +104,8 @@
         </div>
     </footer>
 
-    <a class="floating-whatsapp" href="https://wa.me/9779847695529" target="_blank" rel="noopener">
-        <i class="fab fa-whatsapp"></i> Order on WhatsApp
+    <a class="floating-whatsapp" href="tel:+9779847695529">
+        <i class="fas fa-phone-alt"></i> Call Now
     </a>
 
     <script>
