--- a/menu.html
+++ b/menu.html
@@ -904,6 +904,7 @@
         function sendOrderToWhatsApp() {
             let message = "My Order\n\n";
             message += "*Order Details:*\n";
+            message += Date: ${new Date().toLocaleString()}\n\n;
 
             let total = 0;
             cart.forEach(item => {
@@ -1881,4 +1882,5 @@
 
 
 </html>
+
 
