--- a/offers.html
+++ b/offers.html
@@ -84,9 +84,9 @@
                 <div
                     style="background: var(--primary); color: white; padding: 2rem; border-radius: 15px; max-width: 600px; margin: 0 auto;">
                     <h2
-                        style="margin-bottom: 1rem; font-family: 'Bebas Neue', cursive; letter-spacing: 1.5px; font-size: 2.5rem;">
+                        style="margin-bottom: 1rem; color: black; font-family: 'Bebas Neue', cursive; letter-spacing: 1.5px; font-size: 2.5rem;">
                         Daily Specials</h2>
-                    <p style="margin-bottom: 1.5rem; font-family: 'Montserrat', sans-serif;">Check back often for new
+                    <p style="margin-bottom: 1.5rem; color: black; font-family: 'Montserrat', sans-serif;">Check back often for new
                         deals and seasonal promotions</p>
                     <a href="https://wa.me/9779847375984?text=Hi, what are your current offers?"
                         class="order-now-btn btn-outline" target="_blank"
@@ -139,3 +139,4 @@
 
 
 </html>
+
