--- a/menu.html
+++ b/menu.html
@@ -270,7 +270,7 @@
                 { "name": "Mixed Fried Rice", "price": "200" },
             ],
             "Chowmein": [
-                { "name": "Chowmein", "price": "110" },
+                { "name": "Veg Chowmein", "price": "110" },
                 { "name": "Chicken Chowmein", "price": "170" },
                 { "name": "Buff Chowmein", "price": "150" },
                 { "name": "Mixed Chowmein", "price": "190" },
@@ -1886,6 +1886,7 @@
 
 
 </html>
+
 
 
 
