--- a/menu.html
+++ b/menu.html
@@ -1044,7 +1044,7 @@
 
         .cart-icon:hover {
             transform: scale(1.1);
-            background: #f8e800;
+            background: #25D366;
         }
 
         .cart-badge {
@@ -1886,6 +1886,7 @@
 
 
 </html>
+
 
 
 
