--- a/menu.html
+++ b/menu.html
@@ -1052,7 +1052,7 @@
             top: -5px;
             right: -5px;
             background: #eed118;
-            color: #25D366;
+            color: green;
             border-radius: 50%;
             width: 24px;
             height: 24px;
@@ -1886,6 +1886,7 @@
 
 
 </html>
+
 
 
 
