--- a/menu.html
+++ b/menu.html
@@ -1028,7 +1028,7 @@
 
         .cart-icon {
             background: #eed118;
-            color: var(--secondary);
+            color: green;
             width: 60px;
             height: 60px;
             border-radius: 50%;
@@ -1886,6 +1886,7 @@
 
 
 </html>
+
 
 
 
