--- a/offers.html
+++ b/offers.html
@@ -79,22 +79,26 @@
                 </div>
             </div>
 
-            <!-- Daily Specials Section -->
-            <div class="center" style="margin-top: 3rem;">
-                <div
-                    style="background: var(--primary); color: white; padding: 2rem; border-radius: 15px; max-width: 600px; margin: 0 auto;">
-                    <h2
-                        style="margin-bottom: 1rem; color: black; font-family: 'Bebas Neue', cursive; letter-spacing: 1.5px; font-size: 2.5rem;">
-                        Daily Specials</h2>
-                    <p style="margin-bottom: 1.5rem; color: black; font-family: 'Montserrat', sans-serif;">Check back often for new
-                        deals and seasonal promotions</p>
-                    <a href="https://wa.me/9779847375984?text=Hi, what are your current offers?"
-                        class="order-now-btn btn-outline" target="_blank"
-                        style="border-color: white; color: black; font-family: 'Montserrat', sans-serif;">
-                        Inquire About Offers
-                    </a>
-                </div>
+          <!-- Daily Specials Section - Full Width -->
+<div style="background: var(--primary); margin-top: 3rem; width: 100%;">
+    <div class="container">
+        <div class="center" style="padding: 2rem 0;">
+            <div style="color: white; padding: 2rem; border-radius: 15px; max-width: 600px; margin: 0 auto; text-align: center;">
+                <h2 style="margin-bottom: 1rem; color: black; font-family: 'Bebas Neue', cursive; letter-spacing: 1.5px; font-size: 2.5rem;">
+                    Daily Specials
+                </h2>
+                <p style="margin-bottom: 1.5rem; color: black; font-family: 'Montserrat', sans-serif;">
+                    Check back often for new deals and seasonal promotions
+                </p>
+                <a href="https://wa.me/9779847375984?text=Hi, what are your current offers?"
+                    class="order-now-btn btn-outline" target="_blank"
+                    style="border-color: white; color: black; font-family: 'Montserrat', sans-serif;">
+                    Inquire About Offers
+                </a>
             </div>
+        </div>
+    </div>
+</div>
         </section>
     </main>
 
@@ -139,4 +143,5 @@
 
 
 </html>
+
 
