--- a/about.html
+++ b/about.html
@@ -129,8 +129,8 @@
 
                     <!-- Main Navigation -->
                     <nav class="site-nav">
-                        <a href="index.html" class="nav-link">About</a>
-                        <a href="menu.html" class="nav-link">Menu</a>
+                        <a href="index.html" class="nav-link">Menu</a>
+                        <a href="about.html" class="nav-link">About</a>
                         <a href="offers.html" class="nav-link">Offers</a>
                     </nav>
                 </div>
@@ -247,3 +247,4 @@
 
 
 </html>
+
