--- a/offers.html
+++ b/offers.html
@@ -24,9 +24,9 @@
                         <div class="tagline">"Where Hunger Comes to An End"</div>
                     </div>
                     <nav class="site-nav">
-                        <a href="index.html" class="nav-link">About</a>
-                        <a href="menu.html" class="nav-link">Menu</a>
+                        <a href="index.html" class="nav-link">Menu</a>
                         <a href="offers.html" class="nav-link">Offers</a>
+                        <a href="about.html" class="nav-link">About</a>
                     </nav>
                 </div>
             </div>
@@ -143,5 +143,6 @@
 
 
 </html>
+
 
 
