--- a/index.html
+++ b/index.html
@@ -1089,7 +1089,7 @@
     position: absolute;
     top: -8px;
     right: -8px;
-    background: #E53935; /* urgency red */
+    background: #35E539; /* urgency red */
     color: #FFFFFF;
 
     /* Rounded square badge */
@@ -1120,10 +1120,6 @@
     100% { transform: scale(1); }
 }
 
-        const cartIcon = document.querySelector('.cart-icon');
-
-cartIcon.classList.add('bounce');
-setTimeout(() => cartIcon.classList.remove('bounce'), 400);
 
 /* Badge */
 .cart-badge {
@@ -1979,6 +1975,7 @@ setTimeout(() => cartIcon.classList.remove('bounce'), 400);
 
 
 </html>
+
 
 
 
