--- a/index.html
+++ b/index.html
@@ -1089,7 +1089,7 @@
     position: absolute;
     top: -8px;
     right: -8px;
-    background: #35E539; /* urgency red */
+    background: #35E539;
     color: #FFFFFF;
 
     /* Rounded square badge */
@@ -1975,6 +1975,7 @@
 
 
 </html>
+
 
 
 
