--- a/index.html
+++ b/index.html
@@ -292,13 +292,13 @@
             ],
             "Rice or Roti Meal": [
                 { "name": "Butter Chicken Curry", "price": 210, "extras": [
-                        { "name": "Rice" } {"name": "Roti"}]},
+                        { "name": "Rice" }, {"name": "Roti"}]},
                 { "name": "Tandoori Chicken Curry", "price": 200, "extras": [
-                        { "name": "Rice" } {"name": "Roti"}]},
+                        { "name": "Rice" }, {"name": "Roti"}]},
                 { "name": "Masala Paneer Curry", "price": 200, "extras": [
-                        { "name": "Rice" } {"name": "Roti"}]},
+                        { "name": "Rice" }, {"name": "Roti"}]},
                 { "name": "Aloo Curry", "price": 160, "extras": [
-                        { "name": "Rice" } {"name": "Roti"}]},
+                        { "name": "Rice" }, {"name": "Roti"}]},
             ],
             "Cold Drinks": [
                 { "name": "Coke / Fanta / Sprite", "price": 70 },
@@ -1947,3 +1947,4 @@
 
 
 </html>
+
