--- a/offers.html
+++ b/offers.html
@@ -11,8 +11,11 @@
         href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:wght@400;500;600;700;800&family=Poppins:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <!-- Preload Castle Regular font -->
+    <link rel="preload" href="fonts/CastleRegular.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="stylesheet" href="style.css">
 </head>
+<!-- Rest of offers.html remains unchanged -->
 
 <body>
     <header class="site-header">
@@ -142,6 +145,7 @@
         }
     </style>
 </body>
+
 
 
 
