--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Page Title</title>
+    <title>Da Aloo- Menu</title>
 
     <link rel="preload" href="fonts/CastleRegular.woff2" as="font" type="font/woff2" crossorigin>
 
