--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Da Aloo- Menu</title>
 
     <link rel="preload" href="fonts/CastleRegular.woff2" as="font" type="font/woff2" crossorigin>
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -2056,3 +2056,4 @@
 
 
 </html>
+
