--- a/offers.html
+++ b/offers.html
@@ -32,8 +32,7 @@
 
     <main>
         <section class="container" style="padding: 2rem 0;">
-            <h1 class="section-title center"
-                style="font-family: 'Bebas Neue', cursive; letter-spacing: 1.5px; font-size: 3.5rem;">Special Offers
+          <h1 class="section-title center">Special Offers</h1>
             </h1>
             <p class="center"
                 style="text-align: center; margin-bottom: 1rem; font-size: 1.1rem; max-width: 600px; margin-left: auto; margin-right: auto; font-family: 'Montserrat', sans-serif;">
@@ -143,6 +142,7 @@
 
 
 </html>
+
 
 
 
